# KDMacTouchBar

./: .gitignore  CMakeLists.txt  LICENSE.LGPL.txt  README.md  kdmactouchbar.pro
.github/workflows/: build.yml
cmake/: Qt6Portability.cmake
docs/: KDMacTouchBar-CopyrightAssignmentForm.docx
examples/: examples.pro
examples/mactouchbar/: mactouchbar.pro  main.cpp  mainwindow.cpp  mainwindow.h
examples/mactouchbar_quick/: mactouchbar.qrc  mactouchbar_quick.pro  main.cpp  main.qml
src/: CMakeLists.txt  kdmactouchbar.h  kdmactouchbar.mm  kdmactouchbar_global.h  src.pro
src/quick/: kdmactouchbarquick.h  kdmactouchbarquick.mm  qml.qrc  quick.pro
src/quick/qml/: TouchBarButton.qml  TouchBarFrame.qml  TouchBarSlider.qml
src/widgets/: kdmactouchbar.mm  widgets.pro
